[package]
name = "util"
version = "0.0.1"
authors = ["The Servo Project Developers"]
publish = false

[lib]
name = "util"
path = "lib.rs"

[features]
non-geckolib = []

[dependencies.plugins]
path = "../plugins"

[dependencies.ipc-channel]
git = "https://github.com/servo/ipc-channel"

[dependencies]
app_units = {version = "0.2.3", features = ["plugins"]}
bitflags = "0.3"
cssparser = {version = "0.5.4", features = ["heap_size", "serde-serialization"]}
deque = "0.3.1"
euclid = {version = "0.6.4", features = ["unstable", "plugins"]}
getopts = "0.2.11"
heapsize = "0.3.0"
heapsize_plugin = "0.1.2"
lazy_static = "0.1"
libc = "0.2"
log = "0.3.5"
num_cpus = "0.2.2"
rand = "0.3"
rustc-serialize = "0.3"
selectors = {version = "0.5", features = ["heap_size"]}
serde = "0.7"
serde_macros = "0.7"
smallvec = "0.1"
string_cache = {version = "0.2.11", features = ["heap_size"]}
url = {version = "0.5.7", features = ["heap_size", "serde_serialization"]}
uuid = "0.1.17"

[target.x86_64-pc-windows-gnu.dependencies]
kernel32-sys = "0.2"
